Add GitHub links to DESCRIPTION

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,23 +2,24 @@ Package: coxstream
 Title: What the Package Does (One Line, Title Case)
 Version: 0.0.0.9000
 Authors@R: 
-    person("Ziyang", "Gong", , "gongziyang@smail.swufe.edu.cn",
-           role = c("aut", "cre"), comment = c(ORCID = "YOUR-ORCID-ID"))
+    person("Ziyang", "Gong", , "gongziyang@smail.swufe.edu.cn", role = c("aut", "cre"),
+           comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
 License: MIT + file LICENSE
-Suggests: 
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.2
-URL: https://github.com/SignorinoY/coxstream, http://gongziyang.com/coxstream/
+URL: https://github.com/SignorinoY/coxstream,
+    http://gongziyang.com/coxstream/
 BugReports: https://github.com/SignorinoY/coxstream/issues
+Depends: 
+    R (>= 4.0),
+    survival
 Imports: 
     deSolve,
     splines2,
     stats
-Depends: 
-    R (>= 2.10),
-    survival
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Encoding: UTF-8
 LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.2
