--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,13 @@ S3method(print,summary.coxstream)
 S3method(summary,coxstream)
 S3method(update,coxstream)
 S3method(vcov,coxstream)
+export(Surv)
 export(basehaz)
 export(coxstream)
+export(cv.coxstream)
 importFrom(lifecycle,deprecated)
+importFrom(stats,coef)
+importFrom(stats,predict)
 importFrom(stats,vcov)
 importFrom(survival,Surv)
+importFrom(survival,concordance)
