:sparkles: change to chebshev's basis functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(basehaz)
 export(coxstream)
 export(cv.coxstream)
 importFrom(lifecycle,deprecated)
+importFrom(pracma,chebPoly)
 importFrom(stats,coef)
 importFrom(stats,predict)
 importFrom(stats,vcov)
