:sparkles: Refactor Cox model implementation to utilize Bernstein polynomial basis functions
- Introduced `prox_forward` function for transforming coefficients between dimensions.
- Replaced Chebyshev polynomial functions with Bernstein polynomial functions in the model.
- Updated the `objective` function to accommodate the new basis functions and their properties.
- Modified documentation to reflect changes in function usage and parameters.
- Enhanced tests for new functions and updated existing tests to ensure correctness.
- Adjusted example in README to demonstrate the new functionality with Bernstein polynomials.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,11 +14,12 @@ Depends:
 Imports: 
     deSolve,
     lifecycle,
-    pracma,
+    MASS,
     stats,
-    survival,
-    trust
+    splines2,
+    survival
 Suggests: 
+    numDeriv,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Encoding: UTF-8
