--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,18 @@ S3method(vcov,coxstream)
 export(Surv)
 export(basehaz)
 export(coxstream)
-export(cv.coxstream)
 importFrom(lifecycle,deprecated)
-importFrom(pracma,chebPoly)
+importFrom(stats,ave)
 importFrom(stats,coef)
+importFrom(stats,model.frame)
+importFrom(stats,model.matrix)
+importFrom(stats,model.response)
+importFrom(stats,nlm)
 importFrom(stats,predict)
+importFrom(stats,printCoefmat)
+importFrom(stats,update)
 importFrom(stats,vcov)
 importFrom(survival,Surv)
 importFrom(survival,concordance)
+importFrom(utils,head)
+importFrom(utils,tail)
